# fetchip

./: meson.build
src/: context.hpp  dns.cpp  dns.hpp  dns_resolver.cpp  dns_resolver.hpp  log.hpp  main.cpp  meson.build
subprojects/: blobify.wrap  pfr.wrap
subprojects/packagefiles/blobify/: meson.build
subprojects/packagefiles/pfr/: meson.build
